# slonik-proto

./: Cargo.toml  readme.txt
python/: async_test.py  calls_test.py  db_test.py  io_test.py  test.py  throughput_test.py
src/: connection_rust_pg.rs  connection_sqlx.rs  lib.rs
