[package]
name = "slonik_proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cheating = []

[dependencies]
postgres = "0.15.2"
pyo3 = { version = "0.9.0-alpha.1", features = ["extension-module"] }
slonik_rt = { git = "https://github.com/lqd/slonik-rt" }
futures = "0.3.3"

[dependencies.sqlx]
git = "https://github.com/lqd/sqlx"
branch = "slonik-rt"
default-features = false
features = ["postgres", "runtime-slonik"]

[lib]
name = "slonik_proto"
crate-type = ["cdylib"]

[profile.release]
debug = true